deps/src/cmake-3.13.4/Tests/RunCMake/ExternalProject/IncludeScope-Add_Step-stderr.txt
^CMake Error at .*/Modules/ExternalProject.cmake:[0-9]+ \(message\):
  error: ExternalProject module must be explicitly included before using
  ExternalProject_Add_Step function
Call Stack \(most recent call first\):
  .*/Modules/ExternalProject.cmake:[0-9]+ \(_ep_parse_arguments\)
  IncludeScope-Add_Step.cmake:[0-9]+ \(ExternalProject_Add_Step\)
  CMakeLists.txt:[0-9]+ \(include\)$
